compiler/tests-spec/testData/psi/linked/constant-literals/boolean-literals/p-1/pos/2.19.kt
/*
 KOTLIN PSI SPEC TEST (POSITIVE)

 SECTIONS: constant-literals, boolean-literals
 PARAGRAPH: 1
 SENTENCE: [2] These are strong keywords which cannot be used as identifiers unless escaped.
 NUMBER: 19
 DESCRIPTION: The use of Boolean literals as the identifier (with backtick) in the import.
 NOTE: this test data is generated by FeatureInteractionTestDataGenerator. DO NOT MODIFY CODE MANUALLY!
 */

import org.jetbrains.`true`.*

import `false`

import `true`.*;

import `false`.*import `true`

import org.jetbrains.kotlin as `false`
